# JacobianODE-1

./: HOW_IT_WORKS.md  LICENSE  QUICKSTART.md  README.md  TRAINING_DETAILS.md  USAGE_GUIDE.md  env_create_uv.sh  pyproject.toml  simple_lorenz_cpu.py  simple_lorenz_test.py
JacobianODE/jacobians/: jacobian_utils.py  lightning_base.py  lightning_utils.py  run_jacobians.py  wandb_utils.py
JacobianODE/jacobians/conf/: config.yaml
JacobianODE/models/: mlp.py
JacobianODE/wmtask/: wmtask.py
_jupyter/: Lorenz (Demo).ipynb  Neural Data.ipynb
_jupyter/output/dysts_data/: JacobianODE.dysts_sim.flows.Lorenz_12periods_100ptsperperiod_Radau_noise_0.00_random_state_42.pkl
_jupyter/output/wandb/: latest-run
output/wandb/: latest-run
output/wandb/run-20251118_232540-mdz4gzqk/: run-mdz4gzqk.wandb
output/wandb/run-20251118_232716-n9g5k7mp/: run-n9g5k7mp.wandb
output/wandb/run-20251118_232859-0ztqitrl/: run-0ztqitrl.wandb
output/wandb/run-20251118_232903-jnhp3n9h/: run-jnhp3n9h.wandb
output/wandb/run-20251118_232903-xbalsjp6/: run-xbalsjp6.wandb
output/wandb/run-20251118_233019-815r3uh6/: run-815r3uh6.wandb
output/wandb/run-20251118_233022-4tdhiicn/: run-4tdhiicn.wandb
output/wandb/run-20251118_233022-c3o2nxgz/: run-c3o2nxgz.wandb
output/wandb/run-20251118_234102-fhjrwexz/: run-fhjrwexz.wandb
output/wandb/run-20251118_234105-r3cpgwim/: run-r3cpgwim.wandb
output/wandb/run-20251118_234105-x9i527yv/: run-x9i527yv.wandb
output/wandb/run-20251118_234408-wzoyirxf/: run-wzoyirxf.wandb
output/wandb/run-20251119_000350-vla0k1rm/: run-vla0k1rm.wandb
(+27 files in other folders)
